src/test/ui/rfc-2632-const-trait-impl/assoc-type.stderr
error[E0277]: cannot add `NonConstAdd` to `NonConstAdd`
  --> $DIR/assoc-type.rs:18:16
   |
LL |     type Bar = NonConstAdd;
   |                ^^^^^^^^^^^ no implementation for `NonConstAdd + NonConstAdd`
   |
   = help: the trait `Add` is not implemented for `NonConstAdd`
note: required by a bound in `Foo::Bar`
  --> $DIR/assoc-type.rs:14:15
   |
LL |     type Bar: ~const std::ops::Add;
   |               ^^^^^^^^^^^^^^^^^^^^ required by this bound in `Foo::Bar`
help: consider introducing a `where` bound, but there might be an alternative better way to express this requirement
   |
LL | impl const Foo for NonConstAdd where NonConstAdd: Add {
   |                                ++++++++++++++++++++++

error: aborting due to previous error

For more information about this error, try `rustc --explain E0277`.
